# django-configvars

./: .gitignore  .pylintrc  AGENTS.md  CODING_STANDARDS.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/scripts/: build-versioned-docs.sh
.github/workflows/: docs.yml  tests.yml
configvars/: __init__.py  apps.py
docs/: Makefile  api.rst  conf.py  development.rst  index.rst  installation.rst  make.bat  management-command.rst  overview.rst  quickstart.rst  requirements.txt  secrets.rst  usage.rst  versioning.rst
docs/_static/: custom.css
docs/_templates/: versions.html
example/: manage.py
example/example_configvars/: asgi.py  local.py  settings.py  urls.py  wsgi.py
tests/: test_configvars.py
